--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,23 @@ services:
     image: mysql/mysql-server:5.7
     environment:
       MYSQL_ROOT_HOST: "%"
-      MYSQL_USER: "bbabbico"
-      MYSQL_PASSWORD: "bbabbico"
-      MYSQL_DATABASE: "bbabbico"
+      MYSQL_USER: bbabbico
+      MYSQL_PASSWORD: bbabbico
+      MYSQL_DATABASE: bbabbico
     ports:
-      - "3307:3306"
+      - "3306:3306"
     command:
       - "mysqld"
       - "--character-set-server=utf8mb4"
       - "--collation-server=utf8mb4_unicode_ci"
+
+  application:
+    build: .
+    expose:
+      - 8080
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+    environment:
+      - TZ="Asia/Seoul"
