--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,17 @@
 spring:
-  profiles:
-    active: local
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3307/bbabbico
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://mysql:3306/bbabbico?useSSL=false&allowPublicKeyRetrieval=true
     username: bbabbico
     password: bbabbico
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
     generate-ddl: true
     hibernate:
